Bug 1067442 - OMXCodecWrapper image validation supports input from WebrtcOMXH264VideoEncoder r=jesup